media/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: lidarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - image: ghcr.io/hotio/lidarr:latest
          name: lidarr
          ports:
            - containerPort: 8686
              name: lidarr
          volumeMounts:
            - mountPath: /config
              name: lidarr-config
            - mountPath: /media/music
              name: music
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: music
          persistentVolumeClaim:
            claimName: music
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
